--- a/templates/index.html
+++ b/templates/index.html
@@ -575,7 +575,7 @@
             <div class="head-area">
                 <div class="head-left">
                     <div class="avatar">
-                        <img src="/static/chatgpt.png" alt="">
+                        <img src="/static/datamesh.png" alt="">
                     </div>
                     <div class="head-info">
                         <div class="head-chat-name">默认对话</div>
@@ -584,14 +584,14 @@
                 </div>
                 <div class="head-right">
                     <div class="head-btns">
-                        <a href="https://github.com/LiangYang666/ChatGPT-Web">
-                            <div class="toggle-btn">
-                                <svg class="svg-icon" viewBox="-2 -2 20 20">
-                                    <!-- GitHub标志 -->
-                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                                </svg>
-                            </div>
-                        </a>
+{#                        <a href="https://github.com/LiangYang666/ChatGPT-Web">#}
+{#                            <div class="toggle-btn">#}
+{#                                <svg class="svg-icon" viewBox="-2 -2 20 20">#}
+{#                                    <!-- GitHub标志 -->#}
+{#                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>#}
+{#                                </svg>#}
+{#                            </div>#}
+{#                        </a>#}
                         <div class="toggle-btn" id="toggle-chats-btn">
                             <svg class="svg-icon" viewBox="0 0 20 20">
                                 <path d="M10,1.445c-4.726,0-8.555,3.829-8.555,8.555c0,4.725,3.829,8.555,8.555,8.555c4.725,0,8.555-3.83,8.555-8.555C18.555,5.274,14.725,1.445,10,1.445 M10,17.654c-4.221,0-7.654-3.434-7.654-7.654c0-4.221,3.433-7.654,7.654-7.654c4.222,0,7.654,3.433,7.654,7.654C17.654,14.221,14.222,17.654,10,17.654 M14.39,10c0,0.248-0.203,0.45-0.45,0.45H6.06c-0.248,0-0.45-0.203-0.45-0.45s0.203-0.45,0.45-0.45h7.879C14.187,9.55,14.39,9.752,14.39,10 M14.39,12.702c0,0.247-0.203,0.449-0.45,0.449H6.06c-0.248,0-0.45-0.202-0.45-0.449c0-0.248,0.203-0.451,0.45-0.451h7.879C14.187,12.251,14.39,12.454,14.39,12.702 M14.39,7.298c0,0.248-0.203,0.45-0.45,0.45H6.06c-0.248,0-0.45-0.203-0.45-0.45s0.203-0.45,0.45-0.45h7.879C14.187,6.848,14.39,7.051,14.39,7.298"></path>
@@ -1094,7 +1094,7 @@
                     if (messages[i].role === "user") {
                         html += '<div class="item item-right"><div class="bubble bubble-right">' + messages[i].content + '</div><div class="avatar"><img src="./static/people.jpg" /></div></div>';
                     } else if(messages[i].role === "assistant"){
-                        html += '<div class="item item-left"><div class="avatar"><img src="./static/chatgpt.png" /></div><div class="bubble bubble-left markdown">' + marked.marked(messages[i].content) + '</div></div>';
+                        html += '<div class="item item-left"><div class="avatar"><img src="./static/datamesh.png" /></div><div class="bubble bubble-left markdown">' + marked.marked(messages[i].content) + '</div></div>';
                     } else if (messages[i].role === "web-system") {
                         html += '<div class="item item-center"><span>' + messages[i].content + '</span></div>';
                     }
@@ -1200,7 +1200,7 @@
         $("#textarea").val("");
         $(".content").scrollTop($(".content")[0].scrollHeight);
         if(text.startsWith('new:')) send_time_str = get_time_str(send_time)
-        let chat_item = $('<div class="item item-left"><div class="avatar"><img src="./static/chatgpt.png" /></div><div class="bubble bubble-left markdown">正在等待回复</div></div>')
+        let chat_item = $('<div class="item item-left"><div class="avatar"><img src="./static/datamesh.png" /></div><div class="bubble bubble-left markdown">正在等待回复</div></div>')
         $(".content").append(chat_item);
         $(".content").scrollTop($(".content")[0].scrollHeight);
         let get_times = 0;
